Geometry Nodes: disconnecting socket disconnects a remote connection #85966

Closed
opened 2021-02-24 22:00:03 +01:00 by Wouter Stomp · 12 comments

System Information
Operating system: Darwin-20.2.0-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 5500M OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.2.13

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-02-23 23:15, hash: b2c7ea6d82
Worked: -

Short description of error
See movie: disconnecting an input from the join geometry multi-input socket sometimes disconnects a connection earlier in the node tree (hard to reproduce, but it happens occasionally.

Exact steps for others to reproduce the error
Schermopname 2021-02-24 om 21.53.58.mov

**System Information** Operating system: Darwin-20.2.0-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 5500M OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.2.13 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-02-23 23:15, hash: `b2c7ea6d82` Worked: - **Short description of error** See movie: disconnecting an input from the join geometry multi-input socket sometimes disconnects a connection earlier in the node tree (hard to reproduce, but it happens occasionally. **Exact steps for others to reproduce the error** [Schermopname 2021-02-24 om 21.53.58.mov](https://archive.blender.org/developer/F9836079/Schermopname_2021-02-24_om_21.53.58.mov)

Added subscriber: @blenderrocket

Added subscriber: @blenderrocket

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

I cannot reproduce this with either the latest stable or current development versions of Blender:

Can you provide a file showing the problem?

Please try the latest daily build: https://builder.blender.org/download/

I cannot reproduce this with either the latest stable or current development versions of Blender: Can you provide a file showing the problem? Please try the latest daily build: https://builder.blender.org/download/

Yes, it still happens with the latest build (2.93.0 Alpha, branch: master, commit date: 2021-02-26 21:23, hash: f7933d0744)
Here is the file in question: Donut geometry nodes.blend
However there are more glitches with the join node easily reproducible, see the one below in an otherwise blank file:
Schermopname 2021-02-27 om 10.46.10.mov

Yes, it still happens with the latest build (2.93.0 Alpha, branch: master, commit date: 2021-02-26 21:23, hash: `f7933d0744`) Here is the file in question: [Donut geometry nodes.blend](https://archive.blender.org/developer/F9836032/Donut_geometry_nodes.blend) However there are more glitches with the join node easily reproducible, see the one below in an otherwise blank file: [Schermopname 2021-02-27 om 10.46.10.mov](https://archive.blender.org/developer/F9846018/Schermopname_2021-02-27_om_10.46.10.mov)

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

Setting as high priority, because this bug really should not exist and it can result in accidentally corrupting node trees.

Setting as high priority, because this bug really should not exist and it can result in accidentally corrupting node trees.

Added subscriber: @FabianSchempp

Added subscriber: @FabianSchempp

This issue was referenced by a4f81c6838

This issue was referenced by a4f81c683896b9ed0c7ca8411c7796f7ccfe65f9

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2021-03-03 14:14:41 +01:00

Resolved by commit a4f81c6838

Resolved by commit a4f81c6838
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#85966
There is no content yet.